Delegate sidenav padding to the content to avoid inner scrollbar

--- a/src/app/core/components/layout/layout.component.css
+++ b/src/app/core/components/layout/layout.component.css
@@ -3,8 +3,7 @@ mat-sidenav-container {
 }
 
 mat-sidenav {
-  padding: 0 10px;
-  width: 360px;
+  width: 375px;
 }
 
 mat-sidenav-content app-sidenav-toggle-button {
